# CppTuiGameEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Engine/: Camera.cpp  Camera.hpp  Color.hpp  Comparator.hpp  Component.cpp  Component.hpp  ComponentList.cpp  ComponentList.hpp  Engine.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GameObjectList.cpp  GameObjectList.hpp  Light.cpp  Light.hpp  Light.tpp  List.hpp  List.tpp  Mesh.cpp  Mesh.hpp  Node.hpp  Node.tpp  Scene.cpp  Scene.hpp  SceneList.cpp  SceneList.hpp  Texture.hpp  Transform.cpp  Transform.hpp  Vector.hpp  Vector2.hpp  Vector2.tpp  Vector3.hpp  Vector3.tpp  Vertex.hpp
tests/: CMakeLists.txt  component-list.cpp  components.cpp  game-object-list.cpp  game-object.cpp  game-objects-list.cpp  game.cpp  scene-list.cpp  scene.cpp  test.cpp
